# pbs-workbench

./: .gitignore  README.md  deploy.sh  modulefile  pyproject.toml
src/: completion.sh  functions.sh  idle.sh  job  job-help.sh  job-modify.sh  job-monitor.sh  job-start.sh  job-su.sh  profile-new.sh
src/job/: api.py  cli.py  format.py  monitor.py  pbsqueue.py  places.py  profile_editor.py  workbench.py
src/job/data/: idle.sh  jupyter.sh
